# main.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"example.com/ramen/controllers/channel"
+	"example.com/ramen/controllers/resources"
 	"fmt"
 	"log"
 	"os"
@@ -133,6 +134,16 @@ func apiRoutes() *fiber.App {
 		router.Post("/", middleware.DeserializeUser, reference.CreateReference)
 		router.Put("/:id", middleware.DeserializeUser, reference.UpdateReference)
 		router.Delete("/:id", middleware.DeserializeUser, reference.DeleteReference)
+	})
+
+	// Resources
+	app.Route("/resources", func(router fiber.Router) {
+		router.Post("/list", middleware.DeserializeUser, resources.ListReference)
+		router.Get("/:id", middleware.DeserializeUser, resources.GetReference)
+		router.Post("/", middleware.DeserializeUser, resources.CreateReference)
+		router.Put("/:id", middleware.DeserializeUser, resources.UpdateReference)
+		router.Delete("/:id", middleware.DeserializeUser, resources.DeleteReference)
+
 	})
 
 	app.Get("/healthchecker", func(c *fiber.Ctx) error {
